# projekt_cpp_lab_1

./: CMakeLists.txt  README.md  doc.odt
doc/: doc.odt
src/: Button.cpp  Button.hpp  Directory.cpp  Directory.hpp  Globals.hpp  Image.cpp  Image.hpp  ImageDisplay.cpp  ImageDisplay.hpp  ImageGallery.cpp  ImageGallery.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageViewer.cpp  ImageViewer.hpp  SizedTexture.cpp  SizedTexture.hpp  Subtarget.cpp  Subtarget.hpp  Tag.cpp  Tag.hpp  filesystem.hpp  fitTextInBox.cpp  fitTextInBox.hpp  main.cpp
src/sfml/: Rect.hpp  Rect.inl  Vector2.hpp  Vector2.inl
